--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ S3method(extract_metadata,dido_dataset)
 S3method(print,dido_attachment)
 export(add_attachment)
 export(add_millesime)
-export(check_config)
+export(check_envs)
 export(clean_metadata)
 export(create_datafile)
 export(create_dataset)
