--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,9 +3,10 @@ pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
   csv-augmente: csv-augmente.html
+  les-environnements: les-environnements.html
   mettre_a_jour_un_datafile: mettre_a_jour_un_datafile.html
   premier-chargement: premier-chargement.html
-last_built: 2022-01-12T12:53Z
+last_built: 2022-01-12T14:35Z
 urls:
   reference: https://mtes-mct.github.io/didoscalim/reference
   article: https://mtes-mct.github.io/didoscalim/articles
