--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(dido_write_csv)
 export(extract_metadata)
 export(get_alerts)
 export(get_datafile)
+export(get_datafile_rid)
 export(get_datafiles)
 export(get_dataset)
 export(get_datasets)
@@ -26,7 +27,6 @@ export(get_id)
 export(get_job)
 export(get_jobs)
 export(get_millesimes)
-export(get_rid)
 export(get_work_env)
 export(list_envs)
 export(load_envs)
