--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,10 +2,22 @@
 
 S3method(extract_metadata,dido_datafile)
 S3method(extract_metadata,dido_dataset)
+S3method(get_datafile_rid,character)
+S3method(get_datafile_rid,default)
+S3method(get_datafile_rid,dido_datafile)
+S3method(get_dataset_id,character)
+S3method(get_dataset_id,default)
+S3method(get_dataset_id,dido_datafile)
+S3method(get_dataset_id,dido_dataset)
 S3method(print,dido_attachment)
+S3method(print,dido_datafile)
+S3method(print,dido_dataset)
+S3method(print,dido_job)
+S3method(print,dido_me)
 export(add_attachment)
 export(add_millesime)
 export(check_envs)
+export(clean_datafile_metadata)
 export(clean_metadata)
 export(create_datafile)
 export(create_dataset)
@@ -22,8 +34,8 @@ export(get_datafile)
 export(get_datafile_rid)
 export(get_datafiles)
 export(get_dataset)
+export(get_dataset_id)
 export(get_datasets)
-export(get_id)
 export(get_job)
 export(get_jobs)
 export(get_millesimes)
