--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,10 +5,12 @@ S3method(extract_metadata,dido_dataset)
 S3method(get_datafile_rid,character)
 S3method(get_datafile_rid,default)
 S3method(get_datafile_rid,dido_datafile)
+S3method(get_datafile_rid,dido_job)
 S3method(get_dataset_id,character)
 S3method(get_dataset_id,default)
 S3method(get_dataset_id,dido_datafile)
 S3method(get_dataset_id,dido_dataset)
+S3method(get_dataset_id,dido_job)
 S3method(print,dido_attachment)
 S3method(print,dido_datafile)
 S3method(print,dido_dataset)
