--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,12 @@ S3method(extract_metadata,dido_datafile)
 S3method(extract_metadata,dido_dataset)
 S3method(get_datafile_rid,character)
 S3method(get_datafile_rid,default)
+S3method(get_datafile_rid,dido_attachment)
 S3method(get_datafile_rid,dido_datafile)
 S3method(get_datafile_rid,dido_job)
 S3method(get_dataset_id,character)
 S3method(get_dataset_id,default)
+S3method(get_dataset_id,dido_attachment)
 S3method(get_dataset_id,dido_datafile)
 S3method(get_dataset_id,dido_dataset)
 S3method(get_dataset_id,dido_job)
@@ -33,6 +35,7 @@ export(dido_read_delim)
 export(dido_write_csv)
 export(extract_metadata)
 export(get_alerts)
+export(get_attachent)
 export(get_datafile)
 export(get_datafile_rid)
 export(get_datafiles)
