--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,11 +2,11 @@ pandoc: 2.11.4
 pkgdown: 1.6.1
 pkgdown_sha: ~
 articles:
+  charger-des-donnees: charger-des-donnees.html
   csv-augmente: csv-augmente.html
   les-environnements: les-environnements.html
   mettre_a_jour_des_donnees: mettre_a_jour_des_donnees.html
-  premier-chargement: premier-chargement.html
-last_built: 2022-01-20T10:39Z
+last_built: 2022-01-20T16:05Z
 urls:
   reference: https://nbc.github.io/didoscalim/reference
   article: https://nbc.github.io/didoscalim/articles
