--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -5,9 +5,8 @@ articles:
   charger-des-donnees: charger-des-donnees.html
   csv-augmente: csv-augmente.html
   les-environnements: les-environnements.html
-  mettre_a_jour_des_donnees: mettre_a_jour_des_donnees.html
-last_built: 2022-01-20T16:05Z
+last_built: 2022-01-20T17:14Z
 urls:
-  reference: https://nbc.github.io/didoscalim/reference
-  article: https://nbc.github.io/didoscalim/articles
+  reference: https://mtes-mct.github.io/didoscalim/reference
+  article: https://mtes-mct.github.io/didoscalim/articles
 
