--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(add_millesime)
 export(check_envs)
 export(clean_metadata)
 export(create_dataset)
+export(delete_dataset)
 export(dido_api)
 export(dido_attachment)
 export(dido_csv)
