--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(get_job)
 export(get_jobs)
 export(get_millesimes)
 export(get_work_env)
+export(is_quiet)
 export(list_envs)
 export(load_envs)
 export(me)
