--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,10 +19,10 @@ S3method(print,dido_job)
 S3method(print,dido_me)
 export(add_attachment)
 export(add_datafile)
+export(add_dataset)
 export(add_millesime)
 export(check_envs)
 export(clean_metadata)
-export(create_dataset)
 export(delete_dataset)
 export(dido_api)
 export(dido_attachment)
