--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ S3method(get_dataset_id,dido_attachment)
 S3method(get_dataset_id,dido_datafile)
 S3method(get_dataset_id,dido_dataset)
 S3method(get_dataset_id,dido_job)
+S3method(internal_clean_metadata,dido_dataset)
 S3method(print,dido_attachment)
 S3method(print,dido_datafile)
 S3method(print,dido_dataset)
