--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,9 @@ export(dido_job)
 export(dido_read_delim)
 export(dido_write_csv)
 export(get_alerts)
+export(get_attachment)
+export(get_attachment_rid.dido_attachment)
+export(get_attachments)
 export(get_datafile)
 export(get_datafile_rid)
 export(get_datafiles)
@@ -49,6 +52,7 @@ export(me)
 export(organization)
 export(replace_millesime)
 export(set_work_env)
+export(update_attachment)
 export(update_datafile)
 export(update_dataset)
 export(upload_file)
