--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,11 +1,11 @@
 pandoc: 2.11.4
-pkgdown: 1.6.1
+pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
-  charger-des-donnees: charger-des-donnees.html
   csv-augmente: csv-augmente.html
+  didoscalim: didoscalim.html
   les-environnements: les-environnements.html
-last_built: 2022-01-23T21:59Z
+last_built: 2022-01-24T07:23Z
 urls:
   reference: https://mtes-mct.github.io/didoscalim/reference
   article: https://mtes-mct.github.io/didoscalim/articles
