--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,18 +40,18 @@ export(dido_write_csv)
 export(get_alerts)
 export(get_attachment)
 export(get_attachment_rid)
-export(get_attachments)
 export(get_datafile)
 export(get_datafile_rid)
-export(get_datafiles)
 export(get_dataset)
 export(get_dataset_id)
-export(get_datasets)
 export(get_job)
-export(get_jobs)
-export(get_millesimes)
 export(get_work_env)
+export(list_attachments)
+export(list_datafiles)
+export(list_datasets)
 export(list_envs)
+export(list_jobs)
+export(list_millesimes)
 export(load_envs)
 export(me)
 export(organization)
