--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,7 +54,7 @@ export(list_jobs)
 export(list_millesimes)
 export(load_envs)
 export(me)
-export(organization)
+export(my_organization)
 export(replace_attachment)
 export(replace_millesime)
 export(set_work_env)
@@ -92,6 +92,7 @@ importFrom(stats,runif)
 importFrom(stringr,fixed)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace)
+importFrom(stringr,str_replace_all)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(tidyr,unite)
