--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,7 +37,6 @@ export(dido_dataset)
 export(dido_job)
 export(dido_read_delim)
 export(dido_write_csv)
-export(get_alerts)
 export(get_attachment)
 export(get_attachment_rid)
 export(get_datafile)
@@ -46,6 +45,7 @@ export(get_dataset)
 export(get_dataset_id)
 export(get_job)
 export(get_work_env)
+export(list_alerts)
 export(list_attachments)
 export(list_datafiles)
 export(list_datasets)
